# horsaga-data

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: all.yml  build.yml  pr.yml  release.yml  testing.yml
_buildtool/: _common.py  build_db.py  gen_enum_stub.py  pdm_pep517_adapter.py
data_mining/: scan_acct_cards.py  scan_gacha.py  scan_pvp_json.py
raw_data/: ability_mat_type.csv  attack_attrib.csv  awaken_gain.csv  cardbase.csv  chara.csv  enchant.csv  formation.csv  rank.csv  rarity.csv  skill.csv  speed.csv  tactic.csv
src/horsaga/: __init__.py
src/horsaga/data/: __init__.py  __init__.pyi  _ability_mat.py  _attrib.py  _base.py  _card.py  _character.py  _enchant.py  _formation.py  _partyrank.py  _rarity.py  _skill.py  _speed.py  _tactic.py  _utils.py
tests/: conftest.py  gacha_data.csv  test_comparedata.py  test_enum.py  test_enum_py39.py  test_lookup.yml  test_lookup_data.py  test_lookup_stub.yml  test_misc.py
