[build-system]
requires = ["pdm-pep517"]
# Can't get PDM custom build step to include the DB file,
# so this build backend wrapping would stay in foreseeable future
build-backend = "pdm_pep517_adapter:api"
backend-path = ["_buildtool"]

[project]
name = "horsaga.data"
description="Hortensia Saga basic game data and constants"
authors = [{name = "Abel Cheung", email = "abelcheung@gmail.com"}]
requires-python = ">=3.8" # functools.singledispatchmethod
dynamic = ["version"]
license = {text = "MIT"}
keywords = ['hortensia', 'hortensia saga', 'horsaga']
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
]
dependencies = ["attrs"]

[project.urls]
homepage = "https://github.com/Hortensia-Saga/horsaga.data"
Source = "https://github.com/Hortensia-Saga/horsaga.data"

[project.optional-dependencies]
test = ["tox"]

[tool.pdm]
version = {use_scm = true}
excludes = [
    "**/*.bak",
    "data_mining/",
]
# horsaga/__init__.py in this module is present only for discovering
# module in tests or editable installs. It is the job of main
# horsaga module to distribute __init__.py.
source-includes = [
    "_buildtool/",
    "README.rst",
    "raw_data/",
    "src/horsaga/__init__.py",
    "tests/",
    "tox.ini",
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.pyright]
exclude = [
    'data_mining',
    '.tox',
]

[tool.isort]
profile = 'black'
combine_as_imports = true
